@@ -1,3 +1,4 @@
+* Format timedelta in CSV export
 * Manage symbol widget
 * Fallback to model name as title
 * Set treeview footer sticky on bottom
